[project]
name = "tutor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ajdsouz", email = "aj.anthonydsouza@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.33.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
