[project]
name = "tutor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ajdsouz", email = "aj.anthonydsouza@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.10",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "openai>=2.33.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
